screen sizes - adjusted styling for different screen sizes  	- tablet portrait + landscape media queries created 	- smaller mobile devices portrait + landscape media queries 	  created
-need to update readme file

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <span class="next-img arrows "><img src="static/images/icon-next.svg" alt="ico-next" onclick="sideSlide(1)"></span>
             </div>
         </div>
-        <div id="galleryModal" class="gallery-modal "><!--pop-up gallery-->
+        <div id="galleryModal" class="gallery-modal "><!--pop-up gallery [not on mobile/tablet]-->
             <div>
                 <img id="closeModal" class="close-modal" src="static/images/icon-close.svg" alt="close-modal">
             </div>
